--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 
         <div class="grid-container-body "> </div>
         <div class="section-header "> About Me </div>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam porta arcu, sed placerat lacus mollis non. Donec cursus leo rhoncus nisi dictum porta. Mauris convallis massa quis lacus egestas semper. Fusce non augue gravida ipsum pretium mollis. Nullam laoreet, nibh sed euismod blandit, risus felis finibus risus, a ornare lacus nisl sed est. Maecenas eu tellus lacinia, laoreet mauris eu, fringilla quam. Aliquam erat turpis, tristique eget lacus eu, tempus hendrerit odio.
-        </p>
+        <div class="section-text">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam porta arcu, sed placerat lacus mollis non. Donec cursus leo rhoncus nisi dictum porta. Mauris convallis massa quis lacus egestas semper. Fusce non augue gravida ipsum pretium mollis. Nullam laoreet, nibh sed euismod blandit, risus felis finibus risus, a ornare lacus nisl sed est. Maecenas eu tellus lacinia, laoreet mauris eu, fringilla quam. Aliquam erat turpis, tristique eget lacus eu, tempus hendrerit odio.
+            </p>
+        </div>
 
         <div class="footer ">You've made it this far, why not <a href="# ">send me an E-Mail?</a> </div>
 
