--- a/index.html
+++ b/index.html
@@ -12,59 +12,58 @@
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Source+Sans+Pro" rel="stylesheet">
     <title>Kevin Thompson</title>
-    <script src="./index.js">
 </head>
 
-// <body>
-//     <div class="page-container">
-//         <div class="name-container">
-//             <div class="name">Kevin Thompson</div>
-//         </div>
-//         <div class="navbar-container"> 
-//             <div class="navbar">
-//                 <a class="active-tab" href="#">   About Me   </a>
-//                 <a class="inactive-tab" href="#"> Education  </a>
-//                 <a class="inactive-tab" href="#"> Experience </a>
-//                 <a class="inactive-tab" href="#"> Skills     </a>
-//                 <a class="inactive-tab" href="#"> Projects   </a>
-//                 <a class="inactive-tab" href="#"> Documents  </a>
+<body>
+    <div class="page-container">
+        <div class="name-container">
+            <div class="name">Kevin Thompson</div>
+        </div>
+        <div class="navbar-container"> 
+            <div class="navbar">
+                <a class="active-tab" href="#">   About Me   </a>
+                <a class="inactive-tab" href="#"> Education  </a>
+                <a class="inactive-tab" href="#"> Experience </a>
+                <a class="inactive-tab" href="#"> Skills     </a>
+                <a class="inactive-tab" href="#"> Projects   </a>
+                <a class="inactive-tab" href="#"> Documents  </a>
 
-//                 <a class="external-item" href="https://github.com/kevthompson"> GitHub </a>
-//                 <a class="external-item" href="https://www.linkedin.com/in/kevin-thompson-b36675135/"> LinkedIn </a>
-//             </div>
-//         </div>
+                <a class="external-item" href="https://github.com/kevthompson"> GitHub </a>
+                <a class="external-item" href="https://www.linkedin.com/in/kevin-thompson-b36675135/"> LinkedIn </a>
+            </div>
+        </div>
         
-//         <div class="section-header " id="about-me-header"> About Me     </div>
-//         <div class="section-text" id="about-me-text"> This is testing to see if a long line would extend the column width to flil the page a bit more appropriately.  </div>
+        <div class="section-header " id="about-me-header"> About Me     </div>
+        <div class="section-text" id="about-me-text"> This is testing to see if a long line would extend the column width to flil the page a bit more appropriately.  </div>
 
-//         <div class="section-header " id="education-header"> Education   </div>
-//         <div class="section-text" id="education-text"> a </div>
+        <div class="section-header " id="education-header"> Education   </div>
+        <div class="section-text" id="education-text"> a </div>
 
-//         <div class="section-header " id="experience-header"> Experience </div>
-//         <div class="section-text" id="experience-text"> a </div>
+        <div class="section-header " id="experience-header"> Experience </div>
+        <div class="section-text" id="experience-text"> a </div>
 
-//         <div class="section-header " id="skills-header"> Skills         </div>
-//         <div class="section-text" id="skills-text">   a  </div>
+        <div class="section-header " id="skills-header"> Skills         </div>
+        <div class="section-text" id="skills-text">   a  </div>
 
-//         <div class="section-header " id="projects-header"> Projects     </div>
-//         <div class="section-text" id="projects-text">  a </div>
+        <div class="section-header " id="projects-header"> Projects     </div>
+        <div class="section-text" id="projects-text">  a </div>
 
-//         <div class="section-header " id="documents-header"> Documents   </div>
-//         <div class="section-text" id="documents-text"> a </div>
+        <div class="section-header " id="documents-header"> Documents   </div>
+        <div class="section-text" id="documents-text"> a </div>
 
-//         <div class="footer ">You've made it this far, why not <a href="# ">send me an E-Mail?</a> </div>
+        <div class="footer ">You've made it this far, why not <a href="# ">send me an E-Mail?</a> </div>
 
-//     </div>
+    </div>
     
-//     <script>
-//         $(function(){
-//             $("#about-me-text").load("lorem.txt");
-//             $("#education-text").load("lorem.txt");
-//             $("#experience-text").load("lorem.txt");
-//             $("#skills-text").load("lorem.txt");
-//             $("#projects-text").load("lorem.txt");
-//             $("#documents-text").load("lorem.txt");        })
-//     </script>
-// </body>
+    <script>
+        $(function(){
+            $("#about-me-text").load("lorem.txt");
+            $("#education-text").load("lorem.txt");
+            $("#experience-text").load("lorem.txt");
+            $("#skills-text").load("lorem.txt");
+            $("#projects-text").load("lorem.txt");
+            $("#documents-text").load("lorem.txt");        })
+    </script>
+</body>
 
 </html>
