--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1;">
+    <embed src="file_name.pdf" width="800px" height="2100px" />
     
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -15,6 +16,7 @@
 </head>
 
 <body>
+<!--   
     <div class="page-container">
         <div class="name-container">
             <div class="name">Kevin Thompson</div>
@@ -63,7 +65,7 @@
             $("#skills-text").load("lorem.txt");
             $("#projects-text").load("lorem.txt");
             $("#documents-text").load("lorem.txt");        })
-    </script>
+    </script> -->
 </body>
 
 </html>
