--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1;">
-    <embed src="file_name.pdf" width="800px" height="2100px" />
+    <embed src="Kevin_Thompson_Resume.pdf" width="800px" height="2100px" />
     
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
+<!--     <link rel="stylesheet" type="text/css" href="mystyle.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Source+Sans+Pro" rel="stylesheet">
     <title>Kevin Thompson</title>
 </head>
