--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1;">
-    <embed src="Kevin_Thompson_Resume.pdf" width="800px" height="2100px" />
+    <embed src="Kevin_Thompson_Resume.pdf"/>
     
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
