finally filled with content

--- a/index.html
+++ b/index.html
@@ -85,37 +85,64 @@
             <div class="my-auto">
                 <h2 class="mb-2">Experience</h2>
 
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <h3 class="mb-0">Enterprise Technology Intern</h3>
+                <div class="resume-item d-flex flex-column flex-md-row mb-0">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Enterprise Technology Intern</h3>
                         <div class="subheading mb-3">State Farm Research &amp; Development Center</div>
                         <ul>
                             <li>
-                                Developed tools to monitor the availability of State Farm websites (Javascript/HTML/CSS)
+                                Developed web tools to monitor the availability of State Farm websites
                             </li>
                             <li>
-                                Reworked the server code into Node.JS to be more secure and maintainable
-                            </li>
-                            <li>
-                                Manipulated data from SQL databases to display results in an intuitive way
+                                Converted existing code into NodeJS for increased security and maintainability
                             </li>
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">May 2018 - Present</span>
+                        <span class="text-primary">May 2018 - August 2018</span>
                     </div>
                 </div>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">ECE 220 Course Staff</h3>
+                        <div class="subheading mb-3">State Farm Research &amp; Development Center</div>
                         <ul>
                             <li>
-                                Responsible for grading assignments and examinations for $2$ of the $9$ discussion sections
+                                Developed web tools to monitor the availability of State Farm websites
+                            </li>
+                            <li>
+                                Converted existing code into NodeJS for increased security and maintainability
                             </li>
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">May 2018 - Present</span>
+                        <span class="text-primary">May 2018 - August 2018</span>
+                    </div>
+                </div>
+                <h3 class="mb-0">ECE 220 Course Staff</h3>
+                <div class="resume-item d-flex flex-column flex-md-row mb-0">
+                    <div class="resume-content mr-auto">
+                        <div class="subheading mb-3">Lab Assistant</div>
+                        <ul>
+                            <li>
+                                Assisting in running weekly discussion sections and office hours
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">Spring 2019</span>
+                    </div>
+                </div>
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                        <div class="subheading mb-3">Grader</div>
+                        <ul>
+                            <li>
+                                Responsible for grading assignments and examinations
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">Spring 2018 - Fall 2018</span>
                     </div>
                 </div>
             </div>
@@ -135,13 +162,27 @@
                         <div class="subheading mb-1">Bachelor of Science</div>
                         <div>Computer Engineering </div>
                         <div>Minor in Mathematics </div>
-                        <div>Overall GPA: 3.3</div>
-                        <div class="mb-2">Technical GPA: 3.7</div>
-                        <div class="resume-date text-md-right mb-4">
+                        <div>Overall GPA: 3.36</div>
+                        <div class="mb-2">Technical GPA: 3.54</div>
+                        <div class="resume-date text-md-left mb-4">
                             <span class="text-primary">Expected Graduation: May 2020</span>
                         </div>
 
                         <h4 class="mb-0">Classes</h4>
+                        <div>CS 225: Data Structures</div>
+                        <div>CS 374: Algorithms &amp; Models of Computation</div>
+                        <br>
+                        <div>ECE 391: Computer Systems Engineering</div>
+                        <br>
+                        <div>ECE 210: Analog Signal Processing</div>
+                        <div>ECE 310: Digital Signal Processing</div>
+                        <br>
+                        <div>ECE 448: Artificial Intelligence</div>
+                        <div>ECE 470: Introduction to Robotics</div>
+                        <br>
+                        <div>MATH 402: Non-Euclidean Geometry</div>
+                        <div>MATH 423: Differential Geometry</div>
+
                         <div></div>
                     </div>
                 </div>
@@ -176,8 +217,18 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
             <div class="my-auto">
-                <h2 class="mb-5">Projects &amp; Interests</h2>
+                <h2 class="mb-2">Projects &amp; Interests</h2>
+                <div class="subheading mb-3">Smart Dishwasher</div>
+                <ul>
+                    <li> Developed an Alexa Skill and API for a UIUC professor's research project </li>
+                    <li> Prepared and presented a research poster for PECI 2018 </li>
+                </ul>
+                <div class="subheading mb-3">Project Euler</div>
+                <ul>
+                    <li> Solutions for 40+ Project Euler problems are visible on my GitHub </li>
+                </ul>
             </div>
+
         </section>
 
 
