--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </ul>
                 <div class="subheading mb-3">Project Euler</div>
                 <ul>
-                    <li> Solutions for 40+ Project Euler problems are visible on my GitHub </li>
+                    <li> Solutions for 40+ Project Euler problems in a variety of languages are visible on my GitHub </li>
                 </ul>
             </div>
 
